# trajopt

./: CMakeLists.txt  package.xml
cmake/modules/: FindGUROBI.cmake
python_examples/: arm_to_joint_target.py
src/: CMakeLists.txt
src/sco/: CMakeLists.txt
src/trajopt/: CMakeLists.txt  bullet_collision_checker.cpp  collision_checker.cpp  collision_checker.hpp  collision_terms.cpp  configuration_space.cpp  problem_description.cpp  problem_description.hpp  trajoptpy.cpp
src/trajopt/test/: CMakeLists.txt  joint-cost-unit.cpp
src/utils/: CMakeLists.txt  stl_to_string.hpp
